--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -2,8 +2,22 @@
 
 {% block body %}
 
-<div>
-    This is going to be about the staff or what ever or about the company. I don't know.
+<div class="about-us">
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+    </p>
 </div>
 
 {% endblock %}
