--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Zarek Insurance, Inc. We offer competitive insurance rates for Life, Auto, Home, Business, and other Vehicles. Located on E. Chestnut Street Burlington, WI">
     <link rel="stylesheet" href="static/css/grids.css">
-    <link rel="stylesheet" href="static/css/main.css">
-    <link rel="stylesheet" href="static/css/header.css">
+    <link rel="stylesheet" href="static/css/base.css">
+    <link rel="stylesheet" href="static/css/home.css">
     <link rel="stylesheet" href="static/css/contact.css">
+    <link rel="stylesheet" href="static/css/about_us.css">
     <title>Zarek Insurance | Insurance Agency Burlington WI</title>
 </head>
 <body>
@@ -28,6 +30,29 @@
     {% block body %}
 
     {% endblock %}
+
+    <footer>
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-md-1-2">
+                <div class="footer-menu">
+                    <h3>Zarek Insurance, Inc.</h3>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/about_us">About Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="pure-u-1 pure-u-md-1-2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.114210881992!2d-88.27920168490833!3d42.680122979166704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584db62f3c859%3A0x653cc5ed514d0495!2sZarek+Insurance%2C+Inc.!5e0!3m2!1sen!2sus!4v1513361713743" width="500" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </footer>
+
+
+<script src="static/js/jquery.min.js"></script>
+<script src="static/js/jquery.marquee.min.js"></script>
+<script src="static/js/marquee.js"></script>
 
 </body>
 </html>
