--- a/templates/home.html
+++ b/templates/home.html
@@ -4,21 +4,50 @@
 
 <div class="logo">
     <img src="static/images/zarek_insurance_logo.png" alt="Zarek Insurance | Insurance Agency Burlington WI. We don't just sell insurance, we build relationships.">
-    <h1>Zarek Insurance, Inc. Something that sounds good and uses the words Burlington and Wisconson for the sake of SEO</h1>
+    <h1>Zarek Insurance, Inc.</br>Providing Insurance For Burlington, As Well As All of Wisconsin and Northern Illinois.</h1>
 </div>
 
-<h3>At Zarek Insurance, we offer competitive insurance rates for:</h3>
-<ul>
-    <li>Auto</li>
-    <li>Homeowners / Rentals</li>
-    <li>Boats / Jet Skis</li>
-    <li>Cycles / ATVs / Snowmobiles</li>
-    <li>Business Coverage</li>
-    <li>Life and Health</li>
-</ul>
+<div class="insurance-rates">
+    <h3>At Zarek Insurance, we offer competitive insurance rates for:</h3>
+    <div class="pure-g">
+        <div class="store-img pure-u-1 pure-u-sm-1-2">
+            <img src="static/images/office1.png" alt="Zarek Insurance, Inc. 124 E Chestnut Street Burlington WI, 53105">
+        </div>
+        <div class="pure-u-1 pure-u-sm-1-2">
+            <ul>
+                <li>Auto</li>
+                <li>Homeowners / Rentals</li>
+                <li>Boats / Jet Skis</li>
+                <li>Cycles / ATVs / Snowmobiles</li>
+                <li>Business Coverage</li>
+                <li>Life and Health</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="carriers">
+
+    <h3>We Represent Some Of Our Top Carriers:</h3>
+
+    <div class="marquee">
+        <img src="static/images/logos/erie_insurance.jpeg" alt="Erie Insurance">
+        <img src="static/images/logos/west_bend.jpg" alt="West Bend Mutual">
+        <img src="static/images/logos/emc.jpg" alt="EMC Insurance">
+        <img src="static/images/logos/badger_mutual.png" alt="Badger Mutual Insurance">
+        <img src="static/images/logos/auto-owners.png" alt="Auto-owners Insurance">
+        <img src="static/images/logos/dairyland.png" alt="Dairyland Insurance">
+        <img src="static/images/logos/MetLife.png" alt="MetLife">
+        <img src="static/images/logos/imt_insurance.gif" alt="IMT Insurance">
+        <img src="static/images/logos/frankenmuth.png" alt="Frankenmuth Insurance">
+        <img src="static/images/logos/motorists_insurance_group.png" alt="Motorists Insurance Group">
+        <img src="static/images/logos/donegal.jpg" alt="Donegal Insurance Group">
+        <img src="static/images/logos/progressive.png" alt="Progressive Insurance">
+    </div>
+</div>
 
 
-<div class="pure-g carriers">
+<!-- <div class="pure-g carriers">
     <div class="pure-u-0 pure-u-sm-1-12">&nbsp;</div>
     <div class="pure-u-1 pure-u-sm-5-6">
         <h3>We represent some of our top carriers:</h3>
@@ -63,6 +92,6 @@
         </ul>
     </div>
     <div class="pure-u-0 pure-u-sm-1-12">&nbsp;</div>
-</div>
+</div> -->
 
 {% endblock %}
