--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -1,6 +1,8 @@
 $dark: #1f1f1f;
 $light: #fff;
-$silver: #e3e3e3;
+$silver: #929291;
+$lightSilver: #e3e3e3;
+$maroon: #b05;
 $xs: 575px;
 $sm: 767px;
 $md: 991px;
