--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,8 +15,10 @@
         </ul>
 
         <ul>
-            <li>
-                <strong>Ph:</strong>(262) 763-8421
+            <li class="call-button">
+                <a href="tel:1-262-763-8421">
+                    <strong>Ph:</strong>(262) 763-8421
+                </a>
             </li>
             <li>
                 <strong>Fax:</strong>(262) 763-3503
