--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,11 +10,19 @@ a {
   text-decoration: none;
   color: #fff; }
   a:hover {
-    color: #e3e3e3;
+    color: #929291;
     text-decoration: none; }
 
 iframe {
   width: 100%; }
+
+.call-button {
+  margin: 0 0 8px 0; }
+  .call-button a {
+    border: 3px solid #e3e3e3;
+    border-radius: 12px;
+    margin: 0 0 0 -8px;
+    padding: 8px; }
 
 header {
   background-color: #1f1f1f;
@@ -29,11 +37,21 @@ header {
           display: none; } }
     header div div:nth-child(2) {
       font-size: 25px;
+      margin: 0;
       text-align: right; }
       @media (max-width: 575px) {
         header div div:nth-child(2) {
           text-align: center;
           width: 100%; } }
+  header .header-call-button div {
+    border: 3px solid #b05;
+    border-radius: 12px;
+    color: #fff;
+    display: inline-block;
+    padding: 8px; }
+    header .header-call-button div:hover {
+      background-color: #b05;
+      color: #1f1f1f; }
   header ul {
     list-style-type: none; }
     header ul li {
@@ -42,15 +60,10 @@ header {
 
 footer {
   background-color: #1f1f1f;
-  color: #e3e3e3;
+  color: #fff;
   padding: 60px 20px; }
   footer .footer-menu {
-    margin: 0 auto;
-    width: 50%; }
-    @media (max-width: 767px) {
-      footer .footer-menu {
-        text-align: center;
-        width: 100%; } }
+    margin: 0 0 0 40px; }
   footer ul {
     font-weight: 300;
     list-style-type: none;
@@ -58,5 +71,8 @@ footer {
     footer ul li {
       margin: 8px 0;
       padding: 8px 0; }
+      footer ul li.call-button a:hover {
+        background-color: #fff;
+        color: #1f1f1f; }
 
 /*# sourceMappingURL=base.css.map */
