--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Zarek Insurance, Inc. We offer competitive insurance rates for Life, Auto, Home, Business, and other Vehicles. Located on E. Chestnut Street Burlington, WI">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111370679-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-111370679-1');
+    </script>
+
+    <!-- <script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-111370679-1', 'auto');
+		ga('send', 'pageview');
+	</script> -->
+
     <link rel="stylesheet" href="static/css/grids.css">
     <link rel="stylesheet" href="static/css/base.css">
     <link rel="stylesheet" href="static/css/home.css">
@@ -23,7 +43,13 @@
                     <li><a href="/about_us">About Us</a></li>
                 </ul>
             </div>
-            <div class="pure-u-1 pure-u-sm-1-2"><a href="tel:1-262-716-9438">Call Now for a Free Quote! <br/>1-262-763-8421</a></div>
+            <div class="pure-u-1 pure-u-sm-1-2">
+                <a class="header-call-button" href="tel:1-262-763-8421">
+                    <div>
+                        Call Now for a Free Quote! <br/>1-262-763-8421
+                    </div>
+                </a>
+            </div>
         </div>
     </header>
 
@@ -34,13 +60,41 @@
     <footer>
         <div class="pure-g">
             <div class="pure-u-1 pure-u-md-1-2">
-                <div class="footer-menu">
-                    <h3>Zarek Insurance, Inc.</h3>
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/contact">Contact</a></li>
-                        <li><a href="/about_us">About Us</a></li>
-                    </ul>
+                <div class="pure-g">
+                    <div class="pure-u-1-2">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="/contact">Contact</a></li>
+                                <li><a href="/about_us">About Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="pure-u-1-2">
+                        <ul>
+                            <li><strong>Zarek Insurance, Inc.</strong></li>
+                            <li>124 E. Chestnut Street</li>
+                            <li>Burlington, WI53105</li>
+                        </ul>
+
+                        <ul>
+                            <li class="call-button">
+                                <a href="tel:1-262-763-8421">
+                                    <strong>Ph:</strong>(262) 763-8421
+                                </a>
+                            </li>
+                            <li>
+                                <strong>Fax:</strong>(262) 763-3503
+                            </li>
+                        </ul>
+
+                        <ul>
+                            <li><strong>Office Hours</strong></li>
+                            <li>Monday - Friday</li>
+                            <li>8:30 AM to 5:00 PM</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="pure-u-1 pure-u-md-1-2">
