--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 <div class="logo">
     <img src="static/images/zarek_insurance_logo.png" alt="Zarek Insurance | Insurance Agency Burlington WI. We don't just sell insurance, we build relationships.">
-    <h1>Zarek Insurance, Inc.</br>Providing Insurance For Burlington, As Well As All of Wisconsin and Northern Illinois.</h1>
+    <h1>Zarek Insurance, Inc.</br>Providing Insurance for Burlington Wisconsin and all of the MidWest.</h1>
 </div>
 
 <div class="insurance-rates">
@@ -33,7 +33,7 @@
     <div class="marquee">
         <img src="static/images/logos/erie_insurance.jpeg" alt="Erie Insurance">
         <img src="static/images/logos/west_bend.jpg" alt="West Bend Mutual">
-        <img src="static/images/logos/emc.jpg" alt="EMC Insurance">
+        <img class="emc" src="static/images/logos/emc.jpg" alt="EMC Insurance">
         <img src="static/images/logos/badger_mutual.png" alt="Badger Mutual Insurance">
         <img src="static/images/logos/auto-owners.png" alt="Auto-owners Insurance">
         <img src="static/images/logos/dairyland.png" alt="Dairyland Insurance">
@@ -42,56 +42,8 @@
         <img src="static/images/logos/frankenmuth.png" alt="Frankenmuth Insurance">
         <img src="static/images/logos/motorists_insurance_group.png" alt="Motorists Insurance Group">
         <img src="static/images/logos/donegal.jpg" alt="Donegal Insurance Group">
-        <img src="static/images/logos/progressive.png" alt="Progressive Insurance">
+        <img class="progressive" src="static/images/logos/progressive.png" alt="Progressive Insurance">
     </div>
 </div>
-
-
-<!-- <div class="pure-g carriers">
-    <div class="pure-u-0 pure-u-sm-1-12">&nbsp;</div>
-    <div class="pure-u-1 pure-u-sm-5-6">
-        <h3>We represent some of our top carriers:</h3>
-        <ul>
-            <li>
-                <img class="erie" src="static/images/logos/erie_insurance.jpeg" alt="Erie Insurance">
-            </li>
-            <li>
-                <img class="west-bend" src="static/images/logos/west_bend.jpg" alt="West Bend Mutual">
-            </li>
-            <li>
-                <img class="emc" src="static/images/logos/emc.jpg" alt="EMC Insurance">
-            </li>
-            </br>
-            <li>
-                <img class="auto-owners" src="static/images/logos/auto-owners.png" alt="Auto-owners Insurance">
-            </li>
-            <li>
-                <img src="static/images/logos/badger_mutual.png" alt="Badger Mutual Insurance">
-            </li>
-            <li>
-                <img src="static/images/logos/dairyland.png" alt="Dairyland Insurance">
-            </li>
-            <li>
-                <img src="static/images/logos/MetLife.png" alt="MetLife">
-            </li>
-            <li>
-                <img class="imt" src="static/images/logos/imt_insurance.gif" alt="IMT Insurance">
-            </li>
-            <li>
-                <img src="static/images/logos/frankenmuth.png" alt="Frankenmuth Insurance">
-            </li>
-            <li>
-                <img src="static/images/logos/motorists_insurance_group.png" alt="Motorists Insurance Group">
-            </li>
-            <li>
-                <img src="static/images/logos/donegal.jpg" alt="Donegal Insurance Group">
-            </li>
-            <li>
-                <img class="progressive" src="static/images/logos/progressive.png" alt="Progressive Insurance">
-            </li>
-        </ul>
-    </div>
-    <div class="pure-u-0 pure-u-sm-1-12">&nbsp;</div>
-</div> -->
 
 {% endblock %}
