--- a/templates/base.html
+++ b/templates/base.html
@@ -36,15 +36,15 @@
 
     <header>
         <div class="pure-g">
-            <div class="pure-u-1 pure-u-sm-1-2">
+            <div class="header-menu pure-u-1 pure-u-sm-1-2">
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/contact">Contact</a></li>
                     <li><a href="/about_us">About Us</a></li>
                 </ul>
             </div>
-            <div class="pure-u-1 pure-u-sm-1-2">
-                <a class="header-call-button" href="tel:1-262-763-8421">
+            <div class="header-call-button pure-u-1 pure-u-sm-1-2">
+                <a class= href="tel:1-262-763-8421">
                     <div>
                         Call Now for a Free Quote! <br/>1-262-763-8421
                     </div>
