--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -74,6 +74,7 @@ header {
                     &:hover {
                         background-color: $maroon;
                         color: $dark;
+                        cursor: pointer;
                     }
                 }
             }
