added a dropdown menu

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,30 +29,66 @@ header {
   color: #fff;
   padding: 4px 32px; }
   header div {
-    margin: 8px 0; }
-    header div .header-menu {
-      margin: auto; }
-      @media (max-width: 575px) {
-        header div .header-menu {
-          display: none; } }
+    margin: auto; }
+    header div .dropdown-menu {
+      display: none; }
+      @media (max-width: 567px) {
+        header div .dropdown-menu {
+          display: block; } }
+      header div .dropdown-menu i {
+        cursor: pointer;
+        font-size: 22px;
+        opacity: .8;
+        padding: 4px; }
+        header div .dropdown-menu i:hover {
+          opacity: 1; }
+    @media (max-width: 567px) {
+      header div .header-menu {
+        display: none; } }
     header div .header-call-button {
       font-size: 25px;
-      margin: 0;
+      margin: 8px 0;
       text-align: right; }
-      @media (max-width: 575px) {
+      @media (max-width: 567px) {
         header div .header-call-button {
-          text-align: center;
-          width: 100%; } }
+          text-align: center; } }
       header div .header-call-button a div {
         border: 3px solid #b05;
         border-radius: 12px;
         color: #fff;
+        cursor: pointer;
         display: inline-block;
-        padding: 8px; }
+        padding: 8px;
+        text-align: center; }
         header div .header-call-button a div:hover {
           background-color: #b05;
-          color: #1f1f1f;
-          cursor: pointer; }
+          color: #1f1f1f; }
+  header .dropdown-list {
+    display: none;
+    position: absolute;
+    width: 85%; }
+    @media (max-width: 567px) {
+      header .dropdown-list {
+        display: block; } }
+    header .dropdown-list ul {
+      display: none;
+      font-size: 30px;
+      text-align: center;
+      width: 100%;
+      z-index: 1; }
+      header .dropdown-list ul li {
+        background-color: #1f1f1f;
+        border: 3px solid #e3e3e3;
+        border-bottom: none;
+        color: #fff;
+        cursor: pointer;
+        border-radius: 12px;
+        display: block;
+        padding: 24px 12px; }
+        header .dropdown-list ul li:hover {
+          color: #b05; }
+        header .dropdown-list ul li a {
+          display: none; }
   header ul {
     list-style-type: none; }
     header ul li {
