--- a/templates/base.html
+++ b/templates/base.html
@@ -26,30 +26,48 @@
 	</script> -->
 
     <link rel="stylesheet" href="static/css/grids.css">
+    <script src="https://use.fontawesome.com/a01f837deb.js"></script>
+
+    <!-- Custom stylesheets -->
     <link rel="stylesheet" href="static/css/base.css">
     <link rel="stylesheet" href="static/css/home.css">
     <link rel="stylesheet" href="static/css/contact.css">
     <link rel="stylesheet" href="static/css/about_us.css">
+
     <title>Zarek Insurance | Insurance Agency Burlington WI</title>
 </head>
 <body>
 
     <header>
         <div class="pure-g">
-            <div class="header-menu pure-u-1 pure-u-sm-1-2">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <li><a href="/about_us">About Us</a></li>
-                </ul>
+            <div class="pure-u-1-6 pure-u-sm-1-2">
+                <div class="header-menu">
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/about_us">About Us</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown-menu">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </div>
             </div>
-            <div class="header-call-button pure-u-1 pure-u-sm-1-2">
-                <a class= href="tel:1-262-763-8421">
-                    <div>
-                        Call Now for a Free Quote! <br/>1-262-763-8421
-                    </div>
-                </a>
+            <div class="pure-u-5-6 pure-u-sm-1-2">
+                <div class="header-call-button">
+                    <a href="tel:1-262-763-8421">
+                        <div>
+                            Call Now for a Free Quote! <br/>1-262-763-8421
+                        </div>
+                    </a>
+                </div>
             </div>
+        </div>
+        <div class="dropdown-list">
+            <ul>
+                <li>Home<a href="/"></a></li>
+                <li>Contact<a href="/contact"></a></li>
+                <li>About Us<a href="/about_us"></a></li>
+            </ul>
         </div>
     </header>
 
@@ -107,6 +125,7 @@
 <script src="static/js/jquery.min.js"></script>
 <script src="static/js/jquery.marquee.min.js"></script>
 <script src="static/js/marquee.js"></script>
+<script src="static/js/dropDownMenu.js"></script>
 
 </body>
 </html>
