fixed the hover color

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,7 +86,7 @@ header {
         display: block;
         padding: 24px 12px; }
         header .dropdown-list ul li:hover {
-          color: #b05; }
+          color: #929291; }
         header .dropdown-list ul li a {
           display: none; }
   header ul {
