--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -126,7 +126,7 @@ header {
                 padding: 24px 12px;
 
                 &:hover {
-                    color: $maroon;
+                    color: $silver;
                 }
 
                 a {
