--- a/static/scss/about_us.scss
+++ b/static/scss/about_us.scss
@@ -1,5 +1,18 @@
 @import 'variables';
 
 .about-us {
+    max-width: 960px;
+    margin: 0 auto;
     padding: 60px;
+
+    h2 {
+        font-size: 40px;
+        line-height: 60px;
+        text-align: center;
+    }
+
+    p {
+        font-size: 20px;
+        line-height: 30px;
+    }
 }
