--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -3,20 +3,25 @@
 {% block body %}
 
 <div class="about-us">
+    <h2>About Zarek Insurance - Since 1952</h2>
+
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+        We have just celebrated our 65th year anniversary. The agency history goes back to 1952 with the owner, Gene Zarek, coming to work in the insurance agency side. Gene was a field representative with West Bend Mutual called on the Burlington Insurance Agency. Gene accepted a partnership and ran the agency with his customer service representatives and eventually bought out the partners and changed the name to Gene Zarek Insurance, and later changed it again to Zarek Insurance, Inc.
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+        West Bend is still the leading company in the agency with its rich tradition in top notch customer service.
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+        The current owner is Paul Zarek, who started in the agency in 1979 and took over ownership in 1986. Gene instilled in Paul and the agency that "The customer is King." That is how the agency operates. The insured customer is out main responsibility and is taken care of like a King (or Queen).
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+        We provide coverage and protection for auto, home, business, life and health insurance.
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam molestiae neque quisquam aperiam tempore harum, laudantium voluptate. Minima suscipit, iste voluptate maxime recusandae, architecto aliquam accusantium tempora corporis perspiciatis, molestias?
+        Being an independent agent allows us to find markets that fit our customers needs. We have many A+ rated companies that are outstanding in the claims and coverage provided.
+    </p>
+    <p>
+        The main advantage of our agency is that we work for you, the customer. We get involved in claims and if there is a dispute we step in as an ally for out client.
     </p>
 </div>
 
