--- a/templates/home.html
+++ b/templates/home.html
@@ -3,26 +3,9 @@
 {% block body %}
 
 <div class="logo">
-    <img src="static/images/zarek_insurance_logo.png" alt="Zarek Insurance | Insurance Agency Burlington WI. We don't just sell insurance, we build relationships.">
-    <h1>Zarek Insurance, Inc.</br>Providing Insurance for Burlington Wisconsin and all of the MidWest.</h1>
-</div>
-
-<div class="insurance-rates">
-    <h3>At Zarek Insurance, we offer competitive insurance rates for:</h3>
-    <div class="pure-g">
-        <div class="store-img pure-u-1 pure-u-sm-1-2">
-            <img src="static/images/office1.png" alt="Zarek Insurance, Inc. 124 E Chestnut Street Burlington WI, 53105">
-        </div>
-        <div class="pure-u-1 pure-u-sm-1-2">
-            <ul>
-                <li>Auto</li>
-                <li>Homeowners / Rentals</li>
-                <li>Boats / Jet Skis</li>
-                <li>Cycles / ATVs / Snowmobiles</li>
-                <li>Business Coverage</li>
-                <li>Life and Health</li>
-            </ul>
-        </div>
+    <div>
+        <img src="static/images/zarek_insurance_logo.png" alt="Zarek Insurance | Insurance Agency Burlington WI. We don't just sell insurance, we build relationships.">
+        <h1>Zarek Insurance, Inc.</br>Providing Insurance for Burlington Wisconsin and all of the MidWest.</h1>
     </div>
 </div>
 
@@ -43,6 +26,37 @@
         <img src="static/images/logos/motorists_insurance_group.png" alt="Motorists Insurance Group">
         <img src="static/images/logos/donegal.jpg" alt="Donegal Insurance Group">
         <img class="progressive" src="static/images/logos/progressive.png" alt="Progressive Insurance">
+    </div>
+</div>
+
+<div class="insurance-rates">
+    <h3>At Zarek Insurance, we offer competitive rates for:</h3>
+    <div class="pure-g">
+        <div class="car-insurance pure-u-1 pure-u-sm-1-2" title="Car Insurance">
+            <p>Car Insurance</p>
+        </div>
+        <div class="home-insurance pure-u-1 pure-u-sm-1-2" title="Home Insurance">
+            <p>Home Insurance</p>
+        </div>
+        <div class="business-insurance pure-u-1 pure-u-sm-1-2" title="Business Insurance">
+            <p>Business Insurance</p>
+        </div>
+        <div class="life-insurance pure-u-1 pure-u-sm-1-2" title="Life Insurance">
+            <p>Life Insurance</p>
+        </div>
+    </div>
+
+    <div>
+        <h4>
+            As well as:
+        </h4>
+        <ul>
+            <li>Boats</li>
+            <li>Jet Skis</li>
+            <li>Cycles</li>
+            <li>ATVs</li>
+            <li>Snowmobiles</li>
+        </ul>
     </div>
 </div>
 
