added img and fixed description

--- a/static/css/about_us.css
+++ b/static/css/about_us.css
@@ -6,8 +6,19 @@
     font-size: 40px;
     line-height: 60px;
     text-align: center; }
+    @media (max-width: 567px) {
+      .about-us h2 {
+        margin: 0 0 20px; } }
   .about-us p {
     font-size: 20px;
     line-height: 30px; }
+  .about-us div {
+    float: right;
+    margin: 0 60px;
+    text-align: center; }
+    @media (max-width: 567px) {
+      .about-us div {
+        float: none;
+        margin: 0; } }
 
 /*# sourceMappingURL=about_us.css.map */
