--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -5,9 +5,14 @@
 <div class="about-us">
     <h2>About Zarek Insurance - Since 1952</h2>
 
+    <div>
+        <img src="static/images/office1.png" alt="Zarek Insurace Burlington WI">
+    </div>
+
     <p>
         We have just celebrated our 65th year anniversary. The agency history goes back to 1952 with the owner, Gene Zarek, coming to work in the insurance agency side. Gene was a field representative with West Bend Mutual called on the Burlington Insurance Agency. Gene accepted a partnership and ran the agency with his customer service representatives and eventually bought out the partners and changed the name to Gene Zarek Insurance, and later changed it again to Zarek Insurance, Inc.
     </p>
+
     <p>
         West Bend is still the leading company in the agency with its rich tradition in top notch customer service.
     </p>
@@ -15,7 +20,7 @@
         The current owner is Paul Zarek, who started in the agency in 1979 and took over ownership in 1986. Gene instilled in Paul and the agency that "The customer is King." That is how the agency operates. The insured customer is out main responsibility and is taken care of like a King (or Queen).
     </p>
     <p>
-        We provide coverage and protection for auto, home, business, life and health insurance.
+        We provide coverage and protection for car insurance, home insurance, business insurance, life insurance and health insurance.
     </p>
     <p>
         Being an independent agent allows us to find markets that fit our customers needs. We have many A+ rated companies that are outstanding in the claims and coverage provided.
