--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Zarek Insurance, Inc. We offer competitive insurance rates for Life, Auto, Home, Business, and other Vehicles. Located on E. Chestnut Street Burlington, WI">
+    <meta name="description" content="Zarek Insurance, Inc. Offering competitive rates for Car insurance, Home Insurance, Business Insurance, and Life insurance. 124 E Chestnut Street Burlington WI">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111370679-1"></script>
