--- a/static/scss/about_us.scss
+++ b/static/scss/about_us.scss
@@ -9,10 +9,25 @@
         font-size: 40px;
         line-height: 60px;
         text-align: center;
+
+        @media (max-width: $xs) {
+            margin: 0 0 20px;
+        }
     }
 
     p {
         font-size: 20px;
         line-height: 30px;
+    }
+
+    div {
+        float: right;
+        margin: 0 60px;
+        text-align: center;
+
+        @media (max-width: $xs) {
+            float: none;
+            margin: 0;
+        }
     }
 }
