fixed spelling error

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
                         <ul>
                             <li><strong>Zarek Insurance, Inc.</strong></li>
                             <li>124 E. Chestnut Street</li>
-                            <li>Burlington, WI53105</li>
+                            <li>Burlington WI 53105</li>
                         </ul>
 
                         <ul>
