fixed spelling mistakes and text inconsistencies

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,12 +11,13 @@
 
 <div class="carriers">
 
-    <h3>We Represent Some Of Our Top Carriers:</h3>
+    <h3>Some Of Our Top Carriers:</h3>
 
     <div class="marquee">
         <img src="static/images/logos/erie_insurance.jpeg" alt="Erie Insurance">
         <img src="static/images/logos/west_bend.jpg" alt="West Bend Mutual">
         <img class="emc" src="static/images/logos/emc.jpg" alt="EMC Insurance">
+        <img src="static/images/logos/wilson_mutual.jpg" alt="Wilson Mutual">
         <img src="static/images/logos/badger_mutual.png" alt="Badger Mutual Insurance">
         <img src="static/images/logos/auto-owners.png" alt="Auto-owners Insurance">
         <img src="static/images/logos/dairyland.png" alt="Dairyland Insurance">
@@ -30,7 +31,7 @@
 </div>
 
 <div class="insurance-rates">
-    <h3>At Zarek Insurance, we offer competitive rates for:</h3>
+    <h3>At Zarek Insurance, We Offer Competitive Rates For:</h3>
     <div class="pure-g">
         <div class="car-insurance pure-u-1 pure-u-sm-1-2" title="Car Insurance">
             <p>Car Insurance</p>
@@ -48,7 +49,7 @@
 
     <div>
         <h4>
-            As well as:
+            As Well As:
         </h4>
         <ul>
             <li>Boats</li>
