added google analytics and added a text shadow

--- a/static/scss/home.scss
+++ b/static/scss/home.scss
@@ -135,6 +135,7 @@
         p {
             color: $light;
             font-size: 56px;
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; 
         }
     }
 
