--- a/static/css/home.css
+++ b/static/css/home.css
@@ -92,7 +92,8 @@
     height: 400px; }
   .insurance-rates div p {
     color: #fff;
-    font-size: 56px; }
+    font-size: 56px;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
   .insurance-rates h4 {
     font-size: 24px;
     margin: 40px 0 0; }
