--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Zarek Insurance, Inc. Offering competitive rates for Car insurance, Home Insurance, Business Insurance, and Life insurance. 124 E Chestnut Street Burlington WI">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111609764-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-111609764-1');
+    </script>
+
+
     <link rel="stylesheet" href="static/css/grids.css">
     <script src="https://use.fontawesome.com/a01f837deb.js"></script>
 
